# pydynamo_wrapper

./: README.md  setup.cfg
src/pydynamo_wrapper/: base.py
src/pydynamo_wrapper/exceptions/: __init__.py
src/pydynamo_wrapper/helpers/: attributes_to_dynamo_put.py  item_parser.py  sk_finder.py
tests/e2e/: test_e2e.py
tests/pydynamo_wrapper/helpers/: test_item_parser.py  test_sk_finder.py
tests/unit/pydynamo_wrapper/helpers/: test_attributes_to_dynamo_put.py
