[metadata]
name = pydynamo_wrapper
version = 0.0.1
author = Ruu Mouat
author_email = ruu@mou.at
description = ORM-inspired wrapper for working with DynamoDBe
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/ruu1989/pydynamo_wrapper
project_urls =
    Bug Tracker = https://github.com/ruu1989/pydynamo_wrapper/-/issues
    repository = https://github.com/ruu1989/pydynamo_wrapper
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.9
install_requires =
    boto3

[options.packages.find]
where = src
